# src/core/types/list-response.ts
@@ -1,0 +1,7 @@
+export type ListResponse<T> = {
+  pagesCount: number;
+  page: number;
+  pageSize: number;
+  totalCount: number;
+  items: T[];
+};
