# src/modules/blog/blog-router.ts
@@ -6,14 +6,30 @@ import {
   getBlogListHandler,
   updateBlogHandler,
 } from './blog-handlers';
-import { blogDTOValidation, idValidation } from './blog-validators';
+import {
+  blogDTOValidation,
+  idValidation,
+  pageNumberValidation,
+  pageSizeValidation,
+  searchNameTermValidation,
+  sortByValidation,
+  sortDirectionValidation,
+} from './blog-validators';
 import { inputValidationResultMiddleware } from '../../core/middleware/input-validation-result.middleware';
 import { superAdminGuardMiddleware } from '../auth/super-admin-guard.middleware';
 
 export const blogRouter: Router = Router();
 
 blogRouter
-  .get('/', getBlogListHandler)
+  .get(
+    '/',
+    searchNameTermValidation,
+    pageNumberValidation,
+    pageSizeValidation,
+    sortByValidation,
+    sortDirectionValidation,
+    getBlogListHandler,
+  )
   .get('/:id', idValidation, inputValidationResultMiddleware, getBlogHandler)
   .post(
     '/',
