# src/modules/blog/blog-validators.ts
@@ -1,4 +1,8 @@
-import { body, param } from 'express-validator';
+import { body, param, query } from 'express-validator';
+import { PaginationQueryKey } from '../../core/types/pagiation-query-key';
+import { SortQueryKey } from '../../core/types/sort-query-key';
+import { BlogSortField } from './types';
+import { SortDirection } from '../../core/types/sort-deriction';
 
 export const idValidation = param('id')
   .exists()
@@ -10,6 +14,38 @@ export const idValidation = param('id')
   .withMessage('ID must not be empty')
   .isMongoId()
   .withMessage('ID must be a valid Mongo ID');
+
+export const searchNameTermValidation = query('searchNameTerm')
+  .optional()
+  .default(null);
+
+export const pageNumberValidation = query(PaginationQueryKey.pageNumber)
+  .default(1)
+  .isInt({ min: 1 })
+  .withMessage('Page number must be an integer greater than 0')
+  .toInt();
+
+export const pageSizeValidation = query(PaginationQueryKey.pageSize)
+  .default(10)
+  .isInt({ min: 1, max: 100 })
+  .withMessage('Page size must be between 1 and 100')
+  .toInt();
+
+const allowedSortFields = Object.values(BlogSortField);
+export const sortByValidation = query(SortQueryKey.sortBy)
+  .default(BlogSortField.createdAt)
+  .isIn(allowedSortFields)
+  .withMessage(
+    `Invalid sort field. Allowed values: ${allowedSortFields.join(', ')}`,
+  );
+
+const allowedSortDirections = Object.values(SortDirection);
+export const sortDirectionValidation = query(SortQueryKey.sortDirection)
+  .default(SortDirection.desc)
+  .isIn(allowedSortDirections)
+  .withMessage(
+    `Sort direction must be one of: ${allowedSortDirections.join(', ')}`,
+  );
 
 export const nameValidation = body('name')
   .exists()
